# FreelanceDZ

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  server.py
api/routes/: __init__.py  analytics.py  crawler.py  discovery.py  entities.py  export.py  health.py  leads.py
api/templates/: dashboard.html
config/: __init__.py  dialect_matrix.py  industries.py  proxies.py  services_catalog.py  settings.py  wilayas.py
core/: __init__.py  constants.py  exceptions.py  interfaces.py  lifecycle.py  logging_setup.py
docker/: Dockerfile  docker-compose.yml
domain/: __init__.py  enums.py  exceptions.py  models.py  value_objects.py
infrastructure/: __init__.py
infrastructure/entity_resolution/: __init__.py  blocking.py  graph_resolver.py  merger.py  similarity.py
infrastructure/http/: __init__.py  client_factory.py  rate_limiter.py
infrastructure/llm/: __init__.py  base.py  cache.py  factory.py  fallback_heuristic.py  groq_client.py  openrouter_client.py  prompts.py
infrastructure/resilience/: __init__.py  backoff.py  block_detector.py  proxy_orchestrator.py
infrastructure/scrapers/: __init__.py  aggregator.py  base.py  content_extractor.py  duckduckgo.py  frontier.py  mock.py  overpass.py  social_scraper.py
infrastructure/scrapers/plugins/: __init__.py  base_plugin.py  facebook_plugin.py  instagram_plugin.py  tiktok_plugin.py
infrastructure/storage/: __init__.py  database.py  schema.sql  schema_v1.sql  sqlite_repo.py
infrastructure/storage/repositories/: __init__.py  lead_repo.py  (+3 more)
services/: __init__.py  analysis_service.py  analyzer.py  discovery_service.py  export_service.py  infinite_crawler.py  pipeline.py  resolution_service.py  scorer.py  scoring_service.py
tests/: __init__.py  conftest.py  test_contact_parser.py  test_entity_links.py  test_entity_resolver.py  test_freshness.py  test_phone_validator.py  test_query_expander.py  test_query_sanitiser.py  test_spam_filter.py  test_storage.py
utils/: __init__.py  anti_block_engine.py  contact_parser.py  freshness_detector.py  phone_validator.py  query_expander.py  retry.py  spam_filter.py  text_utils.py  url_utils.py
