[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freelancedz-engine"
version = "2.0.0"
description = "Production-grade, modular, async B2B lead-discovery engine for the Algerian market."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FreelanceDZ Team"},
]
keywords = ["scraping", "lead-generation", "algeria", "async", "entity-resolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "phonenumbers>=8.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "openai>=1.40.0",
    "tiktoken>=0.7.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dateutil>=2.9.0",
    "tenacity>=8.5.0",
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.49.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
freelancedz = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "domain*", "utils*", "infrastructure*", "services*", "api*"]
exclude = ["tests*", "docker*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
